# cps-jupyter-notebook

./: 00_IMPORTANT_STORAGE_WARNING.md  01_CLUSTER_GUIDE.md  CHANGES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  READONLY_HOME_FIX.md
.github/workflows/: docker-publish.yml
docker/: 00-prepare-readonly-home.sh  Dockerfile  Dockerfile.comfyui  Dockerfile.cpu  Dockerfile.desktop-ros2  Dockerfile.gpu  Dockerfile.pytorch-code  Dockerfile.tf-code  README.comfyui.md  README.md  comfyui_proxy_config.py  fix-permissions.sh  install-copilot.sh  ipython_kernel_config.py  start-comfyui.sh
docker/jupyter-comfyui-proxy/: MANIFEST.in  README.md  pyproject.toml
docker/jupyter-comfyui-proxy/src/jupyter_comfyui_proxy/: __init__.py
