[project]
name = 'jupyter_comfyui_proxy'
version = '1.0'
description = 'Jupyter Server Proxy configuration for ComfyUI'
readme = 'README.md'
requires-python = ">=3.8"
dependencies = [
  'jupyter-server-proxy >= 4.1.2',
]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."jupyter_serverproxy_servers"]
comfyui = "jupyter_comfyui_proxy:setup_comfyui"
